vault backup: 2026-01-17 21:59:28